attempt to fix DT-2001, spacing in ecom basket on Windows mobile

--- a/less/plugin-ecommerce.less
+++ b/less/plugin-ecommerce.less
@@ -606,11 +606,11 @@
     max-width: 144px;
     @media @mobile {
         max-height: 170px;
-        height: 170px;
+        height: auto;
         img {
             max-height: 150px;
             width: auto;
-            height: 100%;
+            height: auto;
         }
     }
 }
